--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
   "env": {
     "es6": true,
-    "browser": true,
-    "commonjs": true
+    "node": true
   },
   "rules": {
     "quotes": [2, "single", "avoid-escape"],
     "no-empty":  0,
-    "indent": [2, 2],
+    "indent": [2, 2, {"SwitchCase": 1}],
     "semi": [2, "always"],
     "no-extra-semi": 2,
     "no-nested-ternary": 2,
