--- a/package.json
+++ b/package.json
@@ -5,18 +5,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js"
+    "prestart": "npm run build",
+    "start": "node server/index.js",
+    "prebuild": "grunt eslint clean",
+    "build": "mkdir build && browserify -t [reactify] app/index.js -o build/script.js && grunt copy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "winston": "^2.2.0",
     "yargs": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^3.5.0",
+    "eslint-plugin-react": "^6.2.0",
     "grunt": "^1.0.1",
-    "mocha": "^3.0.2"
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-eslint": "^19.0.0",
+    "mocha": "^3.0.2",
+    "reactify": "^1.1.1"
   }
 }
